# Projects_Python

./: .gitignore
Project_Django/WebSite_Django/: .env  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  wymagania.txt
Project_Django/WebSite_Django/WebSite_Django/: asgi.py  settings.py  urls.py  wsgi.py
Project_Django/WebSite_Django/myapp/: models.py  scraper.py  urls.py  views.py
Project_Django/WebSite_Django/templates/: base.html  index.html
ecommerce/: .env  .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
ecommerce/core/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
ecommerce/core/migrations/: 0001_initial.py  0002_alter_address_id_alter_coupon_id_alter_item_id_and_more.py  0003_remove_order_payment_remove_payment_stripe_charge_id_and_more.py  0004_alter_payment_order_alter_payment_provider_and_more.py
ecommerce/core/services/: checkout.py  paypal.py  stripe.py
ecommerce/core/templatetags/: cart_tags.py  cart_template_tags.py  js_filters.py
ecommerce/core/tests/: test_cart_tags.py  test_checkout_form.py  test_checkout_service.py  test_checkout_view.py  test_paypal_service.py  test_stripe_service.py
ecommerce/ecommerce/: settings.py  urls.py
ecommerce/static/css/: app.css  forms.css  paypal.css  stripe.css  style.css
ecommerce/static/js/: checkout.js
ecommerce/templates/: base.html  checkout — kopia.html  checkout.html  footer.html  home.html  navbar.html  order_snippet.html  order_summary.html  payment.html  payment_paypal.html  product.html  request_refund.html  scripts.html
ecommerce/templates/account/: email.html  login.html  logout.html  password_reset.html  signup.html
mysite/: .env  README.md  db.sqlite3  pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
mysite/polls/tests/: test_vote.py  (+2 more)
(+49 files in other folders)
